--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ baseurl: "/gitdash" # the subpath of your site, e.g. /blog
 url: "http://alixedi.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
+analytics: "YOUR_GOOGLE_ANALYTICS_CODE_HERE"
 
 # Build settings
 markdown: kramdown
