--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ url: "http://alixedi.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 analytics: "YOUR_GOOGLE_ANALYTICS_CODE_HERE"
+date_columns: "Took office, Left office"
 
 # Build settings
 markdown: kramdown
