--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
+title: US Presidents
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >
+  Sample dataset containing all the POTUS in history.
 baseurl: "/gitdash" # the subpath of your site, e.g. /blog
 url: "http://alixedi.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: alixedi
+github_username:  alixedi
 analytics: "YOUR_GOOGLE_ANALYTICS_CODE_HERE"
 date_columns: "Took office, Left office"
 
